--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,4 +1,3 @@
-
 .raleway-normal {
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
@@ -9,16 +8,14 @@
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
   font-weight: 700;
-  font-style:normal;
+  font-style: normal;
 }
 .raleway-bolder {
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
   font-weight: 800;
-  font-style:normal;
+  font-style: normal;
 }
-
-
 
 .inter-normal {
   font-family: "Inter", sans-serif;
@@ -37,4 +34,53 @@
   font-optical-sizing: auto;
   font-weight: 800;
   font-style: normal;
+}
+.primary-color {
+  color: #4e47ff;
+}
+header {
+  background-image: url("../assets/Hero-bg.png");
+  background-size: cover;
+  background-position: center;
+    height: 100vh;
+}
+nav {
+  width: 90%;
+  margin: auto;
+}
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  list-style-type: none;
+  background-color: #f8f9fa;
+}
+a {
+  text-decoration: none;
+}
+.logo {
+  font-size: 34px;
+}
+.button {
+  color: #fff;
+  background-color: #4e47ff;
+  border-radius: 5px;
+  padding: 10px 20px;
+}
+.title {
+  text-align: center;
+  font-size: 65px;
+  padding-top: 70px;
+  margin-bottom: 10px;
+}
+.focused {
+  display: inline-block;
+  text-align: center;
+}
+.heading-description {
+  width: 70%;
+  margin:auto;
+  padding: 20px 5px;
+  text-align: center;
 }
