--- a/Styles/style.css
+++ b/Styles/style.css
@@ -84,3 +84,33 @@ a {
   padding: 20px 5px;
   text-align: center;
 }
+
+
+
+#action{
+    width: 90%;
+   margin: 70px auto;;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+  
+}
+.action-image{
+    background-image: url("../assets/wc-mini.png");
+    background-size: cover;
+    background-position: center;
+    width: 500px;
+    height: 400px;
+    border-radius: 30px;
+}
+.action-content h2{
+    font-size: 42px;
+    margin-bottom: 5px;
+}
+.action-content p{
+    font-size: 24px;
+    margin-bottom: 25px;
+    color:rgba(37, 36, 50, 0.559) ;
+}
+
