--- a/Styles/style.css
+++ b/Styles/style.css
@@ -113,4 +113,33 @@ a {
     margin-bottom: 25px;
     color:rgba(37, 36, 50, 0.559) ;
 }
+#users{
+    width: 70%;
+    margin: 70px auto;
+    background: #4d47ff48;
+    padding: 50px;
+    border-radius: 20px;
+}
+#users h2{
+    text-align: center;
+    font-size: 38px;
+    margin-bottom: 20px;
+}
+.user-head{
+    font-size: 80px;
+    color: #4e47ff;
+    text-align: center;
+}
+#users ul{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 
+}
+.user-info{
+    text-align: center;
+    color: #0000006f;
+    text-align: center;
+    font-size: 20px;
+}
