get in touch sectin added

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -35,6 +35,12 @@
   font-weight: 800;
   font-style: normal;
 }
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Raleway", sans-serif;
+  background-color: #f5f8fa;
+}
 .primary-color {
   color: #4e47ff;
 }
@@ -142,4 +148,33 @@ a {
     color: #0000006f;
     text-align: center;
     font-size: 20px;
+}
+
+
+.touchsection{
+    width: 90%;
+    margin: 70px auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.touch-head{
+    font-size: 90px;
+    color:#000000;
+    text-align: left;
+}
+
+label{
+    font-size: 18px;
+    font-family: "Inter", sans-serif;
+    color: black;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+input, textarea{
+    width: 400px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
 }
