--- a/Styles/style.css
+++ b/Styles/style.css
@@ -67,6 +67,8 @@ a {
 }
 .logo {
   font-size: 34px;
+  color: #4E47FF;
+  font-weight: 800;
 }
 .button {
   color: #fff;
@@ -149,8 +151,42 @@ a {
     text-align: center;
     font-size: 20px;
 }
+#feedback{
+    width: 90%;
+    margin: 170px auto;
+}
+.feedback-head{
+    font-size: 42px;
+    margin-bottom: 5px;
+    text-align: center;
+}
 
+.cards{
+    
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+    gap:5px
 
+}
+.user-information{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.testimonial{
+    display: inline-block;;
+}
+.name-user{
+    color: #1515157b;
+    margin-bottom: 3px;
+}
+.date{
+    color: #1515157b;
+    font-size: 14px; 
+    margin-top: 3px;
+}
 .touchsection{
     width: 90%;
     margin: 70px auto;
@@ -178,3 +214,49 @@ input, textarea{
     border: 1px solid #ccc;
     margin-bottom: 20px;
 }
+footer{
+    background-color: #ffffff;
+}
+.footer{
+    width: 60%;
+    margin: auto ;
+    margin-top: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+}
+.footer-logo{
+    font-size: 90px
+}
+
+.footer-description{
+    font-size: 20px;
+    color: #8987A1;
+    margin-bottom: 20px;
+    text-align: center;
+    
+}
+.footer-links ul{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+.footer-links{
+    margin-bottom: 30px;
+}
+.footer-links ul li a{
+    color: #8987A1;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.button:hover {
+    background-color: rgb(0, 74, 0);
+    transition: background-color 0.3s ease;
+}
+
+
+
