--- a/Styles/style.css
+++ b/Styles/style.css
@@ -60,7 +60,6 @@ nav ul {
   align-items: center;
   padding: 20px;
   list-style-type: none;
-  background-color: #f8f9fa;
 }
 a {
   text-decoration: none;
@@ -169,6 +168,14 @@ a {
     margin-top: 30px;
     gap:5px
 
+}
+.cards li{
+    background-color: #ffffff;
+    border-radius: 20px;
+    padding: 20px;
+    width: 300px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
 }
 .user-information{
     display: flex;
