--- a/Styles/style.css
+++ b/Styles/style.css
@@ -101,6 +101,7 @@ a {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    gap: 40px;
   
 }
 .action-image{
@@ -215,12 +216,13 @@ label{
     margin-bottom: 10px;
 }
 input, textarea{
-    width: 400px;
+    width: 450px;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
     margin-bottom: 20px;
 }
+
 footer{
     background-color: #ffffff;
 }
